# computer-vision

./: .gitignore  LICENSE  README.md
1-video-special-effects/: CMakeLists.txt  README.md  build.bat
1-video-special-effects/include/: DA2Network.hpp  cartoonVideo.hpp  faceDetect.h  filters.hpp
1-video-special-effects/src/: cartoonApp.cpp  cartoonVideo.cpp  filters.cpp  imgDisplay.cpp  vidDisplay.cpp
2-content-based-image-retrieval/: CMakeLists.txt  Readme.md  build.bat
2-content-based-image-retrieval/apps/: buildFeatureDB.cpp  queryImage.cpp
2-content-based-image-retrieval/data/: readme.txt
2-content-based-image-retrieval/gui/: cbirGUI.py  requirements.txt
2-content-based-image-retrieval/include/: BaselineFeature.h  CosineDistance.h  DNNFeature.h  DistanceMetric.h  FaceAwareDistance.h  FaceAwareFeature.h  FeatureDatabase.h  FeatureExtractor.h  GaborTextureColorFeature.h  HistogramFeature.h  HistogramIntersection.h  ImageRetrieval.h  MultiHistogramFeature.h  MultiRegionHistogramIntersection.h  ProductMatcherDistance.h  ProductMatcherFeature.h  SSDMetric.h  TextureColorFeature.h  Utils.h  WeightedHistogramIntersection.h
2-content-based-image-retrieval/report/: report.tex
2-content-based-image-retrieval/src/: BaselineFeature.cpp  CosineDistance.cpp  DNNFeature.cpp  DistanceMetric.cpp  FaceAwareDistance.cpp  FaceAwareFeature.cpp  FeatureDatabase.cpp  FeatureExtractor.cpp  GaborTextureColorFeature.cpp  HistogramFeature.cpp  HistogramIntersection.cpp  ImageRetrieval.cpp  MultiHistogramFeature.cpp  MultiRegionHistogramIntersection.cpp  ProductMatcherDistance.cpp  ProductMatcherFeature.cpp  SSDMetric.cpp  TextureColorFeature.cpp  Utils.cpp  WeightedHistogramIntersection.cpp
3-object-recognition/: CMakeLists.txt  Readme.md  build.bat  embedding.py
3-object-recognition/include/: AppState.h  Classifier.h  ConnectedComponents.h  Embedding.h  EmbeddingPlot.h  Evaluator.h  GUI.h  Morphology.h  ObjectDB.h  RegionFeatures.h  Threshold.h  utilities.h
3-object-recognition/src/: Classifier.cpp  ConnectedComponents.cpp  Embedding.cpp  EmbeddingPlot.cpp  Evaluator.cpp  GUI.cpp  Morphology.cpp  ObjectDB.cpp  RegionFeatures.cpp  Threshold.cpp  main.cpp  utilities.cpp
4-ar-system/: CMakeLists.txt  README.md  build.bat
4-ar-system/apps/: augmentedReality.cpp  calibrateCamera.cpp  featureDetector.cpp  multiTargetAR.cpp  siftAR.cpp
4-ar-system/include/: CameraCalibration.h  FeatureDetector.h  PoseEstimator.h  SIFTTracker.h  VirtualEagleObject.h  VirtualObject.h
4-ar-system/report/: report.tex
4-ar-system/src/: CameraCalibration.cpp  FeatureDetector.cpp  PoseEstimator.cpp  SIFTTracker.cpp  VirtualEagleObject.cpp  VirtualObject.cpp
5-deep-networks/: README.md  main.py  requirements.txt
5-deep-networks/models/: gabor_network.pth  greek_transfer.pth  mnist_cnn.pth  mnist_transformer.pth
5-deep-networks/outputs/: task5_results.csv  task5b_cnn_results.csv
5-deep-networks/report/: report.tex
5-deep-networks/src/: __init__.py
5-deep-networks/src/data/: __init__.py  fashion_loader.py  greek_loader.py  handwritten_loader.py  mnist_loader.py
5-deep-networks/src/evaluation/: __init__.py  evaluator.py  filter_analyzer.py  pretrained_analyzer.py
5-deep-networks/src/experiment/: __init__.py  cnn_experiment_config.py  cnn_experiment_runner.py  experiment_config.py  experiment_runner.py
5-deep-networks/src/inference/: __init__.py  live_predictor.py
5-deep-networks/src/network/: __init__.py  digit_network.py  gabor_network.py  transformer_network.py
5-deep-networks/src/training/: __init__.py  trainer.py  transfer_trainer.py
5-deep-networks/src/utils/: __init__.py  device_utils.py  model_io.py
5-deep-networks/src/visualization/: __init__.py  plotter.py
5-deep-networks/tasks/: __init__.py  ext1_pretrained_analysis.py  ext2_gabor_network.py  ext3_live_recognition.py  read_network.py  task1_build_train.py  task2_examine.py  task3_greek.py  task4_transformer.py  task5_experiment.py  task5b_cnn_optimizer.py
6-uterine-cancer-detection/: README.md  ieee-2-column-template.tex  main.py  report_final.tex  requirements.txt  temp_eval.py
6-uterine-cancer-detection/outputs/: presentation.pptx
6-uterine-cancer-detection/report/: report.tex
6-uterine-cancer-detection/src/data/: patch_dataset.py  patch_transforms.py
6-uterine-cancer-detection/src/evaluation/: evaluator.py  gradcam.py
6-uterine-cancer-detection/src/network/: densenet_transfer.py  gabor_resnet.py  resnet_transfer.py  vit_transfer.py
6-uterine-cancer-detection/src/training/: trainer.py  transfer_trainer.py
6-uterine-cancer-detection/src/utils/: gabor_bank.py  model_io.py  plot_gradcam_comparison.py
6-uterine-cancer-detection/src/visualization/: plotter.py
6-uterine-cancer-detection/tasks/: task1_transfer_vit.py  task2_gradcam.py  task3_gabor_resnet.py  task4_train_baselines.py  task5_evaluate_all.py
chromaticity-analysis/: CMakeLists.txt  build.bat  build.sh
chromaticity-analysis/src/: main.cpp
